--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -40,7 +40,6 @@ jobs:
         python -m flake8 backend/
         cd backend/
         python manage.py test
-
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -60,8 +59,7 @@ jobs:
         with:
           context: ./backend/
           push: true
-          tags: lozhkinpa/taski_backend:latest
-
+          tags: lozhkinpa/kittygram_backend:latest
   frontend_tests:
     runs-on: ubuntu-latest
     steps:
@@ -78,7 +76,6 @@ jobs:
       run: |
         cd frontend/
         npm run test
-
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -98,8 +95,7 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: lozhkinpa/taski_frontend:latest
-
+          tags: lozhkinpa/kittygram_frontend:latest
   build_gateway_and_push_to_docker_hub:
     name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -108,7 +104,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to Docker 
+      - name: Login to Docker
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -118,8 +114,7 @@ jobs:
         with:
           context: ./nginx/
           push: true
-          tags: lozhkinpa/taski_gateway:latest
-
+          tags: lozhkinpa/kittygram_gateway:latest
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -137,7 +132,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         source: "docker-compose.production.yml"
-        target: "taski"
+        target: "kittygram"
     - name: Executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
       with:
@@ -146,14 +141,13 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
-          cd taski
+          cd kittygram
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
           sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
-
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
